fix styling margin and scrollbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,7 +16,6 @@ $mrg: 1rem;
         margin-top: $mrg * 8;
         margin-left: $mrg * 2;
         margin-bottom: $mrg * 2;
-        margin-right: $mrg * 2;
     }
     @media (min-width: 540px) {
         margin: $mrg * 4;
