--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,7 @@ a {
 
 ::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
 }
 ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 2px #3c3c3c;
